--- a/Demo/screen.css
+++ b/Demo/screen.css
@@ -10,7 +10,7 @@
 
 #site-title {
   display: block;
-  font: normal bold 60px/.738 MetaBlack, "Arial Black", sans-serif;
+  font: normal bold 40px/.738 MetaBlack, "Arial Black", sans-serif;
   letter-spacing: -0.02em;
 }
 
@@ -32,20 +32,13 @@
 }
 
 body {
-  font: normal 16px/.738 MetaBlack, "Arial Black", sans-serif;
-  color: #6D7581;
-}
-
-select {
-  font: normal 16px "Arial", sans-serif;
-  padding: 1px;
+  font: bold 11px "Verdana", sans-serif;
   color: #6D7581;
 }
 
 th {
   text-align: left;
-  padding: 4px 4px 4px 12px;
-  background: no-repeat;
+  padding: 0px 4px 4px 0px;
 }
 
 td {
@@ -56,7 +49,7 @@ td {
 #controls {
   background-color: black;
   padding: 10px;
-  height: 40px;
+  height: 20px;
 }
 
 #play {
@@ -65,7 +58,7 @@ td {
 }
 
 #scrubber {
-  margin-left: 120px;
-  margin-top: 12px;
-  margin-right: 10px;
+  margin-left: 8px;
+  margin-top: 3px;
+  margin-right: 8px;
 }
