--- a/screen.css
+++ b/screen.css
@@ -62,3 +62,33 @@ td {
   margin-top: 3px;
   margin-right: 8px;
 }
+
+body {
+    margin: 0px;
+}
+#panel {
+    background-color: #333333;
+    padding: 10px;
+    width: 260px;
+    height: 900px;
+    color: #FFFFFF;
+    float: left;
+}
+#panel .title {
+    font: normal 36px/.738 MetaBlack, "Arial Black", sans-serif;
+    color: #16C0F0;
+}
+#panel .sub-title {
+    font: 1.5em Georgia, sans-serif;
+}
+#document {
+    float: left;
+    background-color: #AAAAAA;
+    height: 900px;
+    padding: 10px;
+}
+.header {
+    font: normal 16px "Arial Black", sans-serif;
+    color: #16C0F0;
+    margin-bottom: 4px;
+}
