fast worker works
Former-commit-id: cc24730c40033fe590275a9e671498ae2d44cc64
Former-commit-id: 10757194ac27ecb08fa00c1973435ac41164096a

--- a/Player/screen.css
+++ b/Player/screen.css
@@ -87,6 +87,11 @@ body {
     height: 900px;
     padding: 10px;
 }
+
+.broadway {
+  margin: 10px;
+}
+
 .header {
     font: normal 16px "Arial Black", sans-serif;
     color: #16C0F0;
